--- a/styles/globals.css
+++ b/styles/globals.css
@@ -9,6 +9,31 @@
 
   html,
   body {
-    @apply bg-zinc-900;
+    background: #111;
+  }
+
+  .carousel::-webkit-scrollbar {
+    display: none;
+  }
+}
+
+@layer utilities {
+  .px-global {
+    @apply px-4 md:px-10 lg:px-12;
+  }
+  .my-global {
+    @apply my-6 md:my-8 lg:my-12;
+  }
+}
+
+@layer components {
+  .tab {
+    @apply h-12 w-full bg-zinc-700/40 text-zinc-600 uppercase text-sm font-semibold;
+    @apply lg:h-auto lg:w-auto lg:text-xl lg:bg-transparent lg:border-b-2 lg:pb-2 lg:border-b-transparent;
+  }
+
+  .tab-active {
+    @apply text-white bg-[#111];
+    @apply lg:border-b-white;
   }
 }
