--- a/styles/globals.css
+++ b/styles/globals.css
@@ -79,6 +79,14 @@
   .h-hero {
     @apply h-[50vh];
   }
+  .scrollbar-hidden {
+    scrollbar-width: none;
+    -ms-overflow-style: none;
+  }
+
+  .scrollbar-hidden::-webkit-scrollbar {
+    display: none;
+  }
 }
 
 @layer components {
