--- a/styles/globals.css
+++ b/styles/globals.css
@@ -74,10 +74,10 @@
     @apply bg-background text-foreground;
   }
   .grid-list {
-    @apply grid gap-4 grid-cols-[repeat(auto-fill,minmax(8rem,1fr))] lg:grid-cols-[repeat(auto-fill,minmax(15rem,1fr))];
+    @apply grid gap-4 grid-cols-[repeat(auto-fill,minmax(8rem,1fr))] md:grid-cols-[repeat(auto-fill,minmax(12rem,1fr))] lg:grid-cols-[repeat(auto-fill,minmax(15rem,1fr))];
   }
   .h-hero {
-    @apply h-[50vh];
+    @apply h-[60vh];
   }
   .scrollbar-hidden {
     scrollbar-width: none;
@@ -90,11 +90,8 @@
 }
 
 @layer components {
-  .card {
-    @apply rounded-md border overflow-hidden;
-  }
   .overlay {
-    @apply absolute inset-0 flex items-end bg-gradient-to-t from-background/95 to-transparent;
+    @apply absolute inset-0 border rounded-md flex items-end bg-gradient-to-t from-background/95;
   }
   .empty-box {
     @apply flex h-32 items-center justify-center rounded-lg border border-dashed text-muted-foreground;
